tests/rosetta/out/Java/call-a-function-5.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// call-a-function-5.mochi
import java.util.*;

public class CallAFunction5 {
    static int doIt(Map<String,Integer> p) {
        int b = 0;
        if (p.containsKey("b")) {
            b = (int)(p.get("b"));
        }
        return ((Number)((Number)p.get("a")).doubleValue() + b).doubleValue() + ((Number)p.get("c")).doubleValue();
    }
    static void main() {
        Map<String,Integer> p = new LinkedHashMap<String,Integer>();
        p.put("a", 1);
        p.put("c", 9);
        System.out.println(String.valueOf(doIt(p)));
    }
    public static void main(String[] args) {
        main();
    }
}
